Changelog
=========

1.2-dev - (unreleased)
----------------------
  * Plone4 migration: ported package to plone4 [ichimdav #4312]
  * Plone4 migration: removed dependency to eea.monkeypatch [ghicaale]
  * Cleanup: of pyflakes compiler errors [ichimdav #4141]
  * Cleanup: of pylint violations [ichimdav #4140]

1.1 - (2011-02-15)
------------------
 * Feature: eggified package to Products.EEATemplatesService [ichimdav #2931]
 * Feature: rewrite patches to use collective.monkeypatcher and eea.monkeypatch [tiberich #4066]
 * Feature: trigger ObjectModifiedEvent when saving in portal resource registries [tiberich #4085]

1.0
---
 * Generated skeleton product from DIYPloneStyle.
