@@ -3,6 +3,7 @@ Changelog
 
 1.2-dev - (unreleased)
 ----------------------
+  * TODO: clean tests and replace CMFSquid logic with plone.app.caching
   * Plone4 migration: ported package to plone4 [ichimdav #4312]
   * Plone4 migration: removed dependency to eea.monkeypatch [ghicaale]
   * Cleanup: of pyflakes compiler errors [ichimdav #4141]
